[package]
name = "parenthesized_c"
version = "0.1.0"
authors = ["Dmitrii Demenev <demenev.dmitriy1@gmail.com>"]
edition = "2021"
rust-version = "1.56.1" # https://github.com/foresterre/cargo-msrv
description = "A library that allows to parse `(C)` attribute tokens in `#[repr(C)]`."
documentation = "https://docs.rs/parenthesized_c"
readme = "README.md"
repository = "https://github.com/JohnScience/parenthesized_c"
license = "MIT OR Apache-2.0"
# license-file | not needed
keywords = ["parsing", "syn", "parenthesized", "repr", "C"]
categories = ["development-tools::procedural-macro-helpers"]
# workspace | not needed
# build | not needed
# links | not needed
# exclude | not needed
include = [
    "/Cargo.toml",
    "/LICENSE_APACHE",
    "/LICENSE_MIT",
    "/README.md",
    "/src/lib.rs",
    "/tests/**",
]
# publish | not needed
# metadata | not needed
# default-run | not needed
autobins = false
autoexamples = false
autotests = false
autobenches = false
# resolver | not needed

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.84", features=["parsing"] }
proc-macro2 = "1.0.34"

[dev-dependencies]
syn = { version = "1.0.84", features=["parsing", "full"] }
outer_attribute = "0.1.1"